--- a/styles.css
+++ b/styles.css
@@ -253,7 +253,6 @@
   }
   
 
-
   /*ZONES*/
   h3.zone-title {
     font-size: 1.2rem;
@@ -263,3 +262,23 @@
     padding-bottom: 5px;
   }
   
+/* Visitor Counter  */
+#visitorCounterOverlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.6); /* transparent black */
+  display: none; /* hidden by default */
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+}
+
+#visitorCounterOverlay .overlay-content {
+  background: #fff;
+  padding: 20px;
+  border-radius: 12px;
+  text-align: center;
+}
