--- a/styles.css
+++ b/styles.css
@@ -270,7 +270,7 @@
   width: 100%;
   height: 100%;
   background: rgba(0, 0, 0, 0.6); /* transparent black */
-  display: none; /* hidden by default */
+  display: flex; 
   justify-content: center;
   align-items: center;
   z-index: 1000;
