--- a/styles.css
+++ b/styles.css
@@ -263,17 +263,17 @@
   }
   
 /* Visitor Counter  */
-#visitorCounterOverlay {
+#visitorCounterBar {
   position: fixed;
-  top: 0;
+  bottom: 50px; /* footer ke just upar */
   left: 0;
   width: 100%;
-  height: 100%;
-  background: rgba(0, 0, 0, 0.6); /* transparent black */
-  display: flex; 
-  justify-content: center;
-  align-items: center;
-  z-index: 1000;
+  background: rgba(0, 0, 0, 0.7); /* transparent black */
+  color: #fff;
+  text-align: center;
+  padding: 5px 0; /* patli strip */
+  z-index: 999;
+  font-family: Arial, sans-serif;
 }
 
 #visitorCounterOverlay .overlay-content {
